# llama.cpp

./: CLAUDE.md  env.sh
.trae/rules/: project_rules.md
docs/backend/mlu/: Cambricon-Torch-MLU-Ops-User-Guide-CN-v1.3.2.md  cnnl_basic_data_structure_guide.md  cnrt_cndrv_user_guide.md
ggml/: CMakeLists.txt
ggml/include/: debug_print.h  ggml-mlu.h
ggml/src/: CMakeLists.txt  debug_print.c  ggml-backend-reg.cpp
ggml/src/ggml-mlu/: CMakeLists.txt  common.h  ggml-mlu.cpp  mlu_common.h  mlu_op.cpp  mlu_op.h
ggml/src/ggml-mlu/mlu_include/: cn_api.h  cncl.h  cnnl.h  cnnl_extra.h  cnperf_api.h  cnperf_api_parser.h  cnperf_api_record_data.h  cnperf_api_types.h  cnpx.h  cnpx_internal_defs.h  cnpx_internal_types.h  cnpx_macro_utils.h  cnpx_payload.h  cnpx_payload_helper.h  cnrt.h
tests/: CMakeLists.txt  test-mlu-add.cpp  test-mlu-get-rows.cpp  test-mlu-mul-mat.cpp  test-mlu-mul.cpp  test-mlu-soft-max.cpp  test-mlu-sub.cpp
